# Duel-Master

./: .env.production  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
backend/: .gitignore  app.py  pyproject.toml  requirements.txt  testcase_word_report.py
backend/scripts/: freeze-requirements.bat  run-backend-pip.bat  run-backend-pip.sh  run-backend.bat  run-backend.sh  run-test-pip.bat  run-test-pip.sh  run-test.bat  run-test.sh  venv-pip.sh
backend/src/: __init__.py  constants.py
backend/src/card/: text_extractor.py  translation_pipeline.py  translator.py
backend/tests/: conftest.py  test_app.py
backend/tests/test_card/: test_text_extractor.py  test_translation_pipline.py  test_translator.py
backend/tests/test_image/: test_card_image.py  test_user_image.py
backend/tests/test_utils/: test_misc.py
doc/: tech-doc.md
scripts/: calc-line.bat  run-backend-pip.sh
src/: all.scss  config.ts  main.ts  types.ts
src/api/: getAxios.ts  translation.ts
src/assets/css/: card-slider-3d.css  diff-button.css  jagged-bg.css  main.css  yugioh-bg.css
src/assets/example/: korea-fish.ts  koreaFish.ts  poor-labor.ts  rush-duel.ts  (+1 more)
src/components/: CanvasCard.vue  Card.vue
src/composables/: useCard.ts
src/constants/: avatars.ts
src/example/: poorLabor.ts
src/router/: index.ts
src/styles/: variables.css
src/types/: all.ts  index.d.ts
src/utils/: card-setting.ts  card-tilt.ts  device.ts  effects.ts
src/views/: HomeView.vue  QAView.vue  TestView.vue  TranslationView.vue
tests/api/: db.json
(+41 files in other folders)
